# rust-urlshortener

./: .env  Cargo.toml  Makefile  README.md  Rocket.toml
docker/: .env  docker-compose.yml
docker/mysql/conf.d/: sortition.cnf
docker/mysql/docker-entrypoint-initdb.d/: 0000_initial.sql
src/: .env  config.rs  lib.rs  main.rs
src/database/: diesel_mysql.rs  mod.rs  r2d2_redis.rs
src/id_generator/: base62.rs  mod.rs  random.rs
src/middleware/: request_id.rs
src/model/: url.rs
src/routes/: get_short_url.rs  mod.rs  post_url.rs  response.rs
