[package]
name = "urlshortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "2", features = ["mysql"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
anyhow = "1.0.80"
num_cpus = "1.16.0"
url = "2.5.0"
lazy_static = "1.4.0"

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["diesel_mysql"]
